# CRM-eli

./: .cursorignore  .gitignore  README.md  changes.md  current-working.md  requirements.txt  tasks.md
.cursor/rules/: backend-rules.mdc  frontend-rules.mdc  project-rules.mdc
backend/: .gitignore  README.md  app.py  pyproject.toml  run.py
backend/api/: __init__.py  customers_api.py  dashboard_api.py  invoices_api.py  products_api.py  suppliers_api.py
backend/models/: __init__.py  base.py  customer.py  invoice.py  product.py  supplier.py
backend/schemas/: __init__.py  customer_schema.py  invoice_schema.py  product_schema.py  supplier_schema.py
backend/tests/: __init__.py  test_app.py
backend/utils/: __init__.py  errors.py
client/: package-lock.json  package.json  tailwind.config.ts  theme.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  config.ts
client/src/components/customers/: CustomerFormDialog.tsx
client/src/components/dashboard/: period-selector.tsx  quick-actions.tsx  recent-activity.tsx  recent-transactions.tsx  sales-chart.tsx  stat-card.tsx  top-products.tsx
client/src/components/layout/: header.tsx  layout.tsx  sidebar.tsx  sidebar.tsx.backup
client/src/components/ui/: icons.tsx  use-toast.ts
client/src/hooks/: use-mobile.tsx
client/src/pages/: client-detail.tsx  clients.tsx  customer-detail.tsx  customers.tsx  dashboard.tsx  invoices.tsx  orders.tsx  products.tsx  profile.tsx  reports.tsx  sales.tsx  settings.tsx
docs/: server-api-reference.md
shared/: schema.ts
